jdk 8 fix