@@ -1,2 +1,1 @@
 -Djdk.attach.allowAttachSelf=true
--Djava.security.manager=allow
